<resources>
    <string name="app_name">NotesSharing</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">Signup</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="name">Name</string>
    <string name="already_having_account">Already having account</string>
    <string name="select_pdf">Select Pdf</string>
    <string name="select">Select</string>
    <string name="upload">Upload</string>
    <string name="enter_message">Enter Message</string>
    <string name="todo">TODO</string>
    <string name="upload_document">Upload Document</string>
    <string name="message">message</string>
    <string name="textview">TextView</string>
</resources>